Modification des adresses des images pour qu'elles soient dans l'exécutable